cluster/homelab/apps/media-servers/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tautulli
    namespace: media-servers
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:25VhZg==,iv:91Bv4sJDfiLeNhBBNjts8mFqO9pORCbMg/03FIbKNQM=,tag:a3EhN4sxiEZqFyBwV5DHaA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:uTONa02ZhuwazhTERnRXy/3aFe/188TLw8Bnmmu7yGgEFlXACf/5v6yx,iv:qTs5XNc4tnQk+5ROQ921x5HIchJvKNjaqWRUQyHCOkY=,tag:yIYQvPv37Et86osknNUZpg==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:cvw9hAG13nGn8hmx+PTlGw==,iv:KaB5Fr8sfyzWl8Oo0lfrGHi87dLbNoTgtdny0tzoFvc=,tag:oCBCJyS3PJ2KZ61nMy/U3w==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:o9BUqw==,iv:5WZopVxxpsGam1RWPVjSW4gd8z3uuLw8oTvEaN1Mu5A=,tag:bE7amjaSi1nYlUeMnxTECA==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:WEWqYw==,iv:3ty7ggAmAfdh2S7vLBS0udfRF1bTZdGloaXCsIaaKl4=,tag:1tEQJ8HwF0raslAmTHBp3A==,type:str]
        gethomepage.dev/namespace: ENC[AES256_GCM,data:dIO3jBAYqU+0X5tgTg==,iv:W4j83mgBMiQkDL33rhdMZr1yWBhSMDa8VVROL29m5Dk=,tag:3vVuyQHgkHpHu6CDV3MsHA==,type:str]
        gethomepage.dev/app: ENC[AES256_GCM,data:aBoy/w==,iv:TqLffehCUyv1ay/Dp749H6GCi/FULLiJl3Pord7/1EI=,tag:iuN4UKiNP8yt0V6/LCuCbw==,type:str]
        gethomepage.dev/href: ENC[AES256_GCM,data:UNUVwWiRb5BKdAM+0N62uJZEvA==,iv:jE7yNBXQaRGDUnHn6+yQ6GcI4eURs8b2b4cCXpqh/Yk=,tag:WywsAh/NYuRljLu3wEadFw==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:sl7LBJ9pgjQ=,iv:6a0RxlxG716JezioWNkBAma06/CHfJjuroYUClXtOdY=,tag:qAJY0gBa5Aj5dTw/lVdvCQ==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:trNXz2sLZZf7TuEtBj3mAbUvIs1OKc24HDQ7aHnj,iv:cDNRZwyyvJLVzAw4qKRX3VvL7ewX5y5xKzQg1izx0hU=,tag:wpmIWI9Jn+U8LxEa1rSrsA==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:rqcGeiyZ7ckozJ0TKqM0Z20dkAWHL6B74HxQPX7rFjw=,iv:TW7JHnUKkq1klnejREUabhfrdzb9zCCUInLlYjyMp4Q=,tag:BxamW3ayLsxhQvONKGt16g==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1umudqfh963mmhgkgatylwh9jgez7qh4twpaqy3ea3nlcarhm09hq5er32r
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuZGR2eW5xWjJqUWg5aXN0
[...]
            p9xrjiTjXUFC+pzE5YFsXgeOslTFnieufL5sZztaKssKFyMduH0t+Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-10T09:03:51Z"
    mac: ENC[AES256_GCM,data:Bl8voAN1/2vFVVOKQRfCoHCEGZrl57t00N/kHZNVGpASBu5PvVTOOor/EQgdiu+IWrCrzwMAOBzJDi8KDSjRYaLRBXTdqzXEXt1tAaXf6Yf5jAP6p8YV+s9+ZPUuk07Sx4FVa4u00m3NsnrbYzQtxYXHMR4FUoRySIUAu3nAdQ8=,iv:77oVTBEurJWsr+sEpCelhXmbctoxraG2YMPARKAP/oA=,tag:K6FIhWja79BDdMqH0DVxzw==,type:str]
    pgp: []
    encrypted_regex: ^(rules|annotations|)$
    version: 3.9.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: immich
    namespace: media-servers
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:25VhZg==,iv:91Bv4sJDfiLeNhBBNjts8mFqO9pORCbMg/03FIbKNQM=,tag:a3EhN4sxiEZqFyBwV5DHaA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:tTjP9KC0ex5MTo6mORvYLTRQDOcJm0njDlkVYoQgODchkw==,iv:A9gQryB5hTMtbt5Bmh/Frybw4FAM4zqm1kQMRru/x7M=,tag:uf2FYx2IdcPuGp/Ke3ZM0g==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:46i72vspj9Hf/bolqfaxJg==,iv:BxolWnlqwObp9csnhcAec9Fpch0IzWE9O1Ii8a+3cdc=,tag:jGAJ9zAnhZayvdrEJ9OV+w==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:ofJJeHe2,iv:Mv0ZPGBR1tBaHZFaGRRdpZbva2I1St72QfKyWROkI9U=,tag:6Ie5o4a9hpPYj0STcuEHNg==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:NKLVSO6M,iv:vhfF1xEpG/H1AlQBOF6Ny0HeiKnkU0+PxADkplRHd3I=,tag:NT+577YMFxYD7G5GfMmNRQ==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:yhNiJGL6,iv:C1b55vnnT+E9zXTui+ZLFa56KCPWGyP3HagBgUZbRJk=,tag:qlu+6Gw/q94DCDTqGJgYpQ==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:oA4phGn/+ap5IL0KYi4S7ZE77yWxe7q2SDzWng==,iv:87pozgEBTjpAMpp2ykwuCHsL95kfZNYdjt8YjAOgm5s=,tag:1hO+MNSXUfkB02u62PrmoA==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:fN9QlNJNJ0SJt30p3+ckkydimg4ybeVv/SFmyNCPjHJ1U9+Wstu7YgBb,iv:HzW2RD7wjPaBqPHAlz1t9/xLLK6VOPYhPMoXxt0wNpU=,tag:iNs7jAAj5p3cHlX3ZaAHYQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1umudqfh963mmhgkgatylwh9jgez7qh4twpaqy3ea3nlcarhm09hq5er32r
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuZGR2eW5xWjJqUWg5aXN0
[...]
            p9xrjiTjXUFC+pzE5YFsXgeOslTFnieufL5sZztaKssKFyMduH0t+Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-10T09:03:51Z"
    mac: ENC[AES256_GCM,data:Bl8voAN1/2vFVVOKQRfCoHCEGZrl57t00N/kHZNVGpASBu5PvVTOOor/EQgdiu+IWrCrzwMAOBzJDi8KDSjRYaLRBXTdqzXEXt1tAaXf6Yf5jAP6p8YV+s9+ZPUuk07Sx4FVa4u00m3NsnrbYzQtxYXHMR4FUoRySIUAu3nAdQ8=,iv:77oVTBEurJWsr+sEpCelhXmbctoxraG2YMPARKAP/oA=,tag:K6FIhWja79BDdMqH0DVxzw==,type:str]
    pgp: []
    encrypted_regex: ^(rules|annotations|)$
    version: 3.9.1
